infra/k8s/event-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-catalog-service
  namespace: ticketing-platform
  labels:
    app: event-catalog-service
    tier: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-catalog-service
  template:
    metadata:
      labels:
        app: event-catalog-service
        tier: application
    spec:
      containers:
        - name: event-catalog-service
          image: ticketing/event-catalog-service:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
