infra/k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: ticketing-platform
  labels:
    app: notification-service
    tier: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
        tier: application
    spec:
      containers:
        - name: notification-service
          image: ticketing/notification-service:latest
          ports:
            - containerPort: 3007
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
