infra/k8s/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ticketing-platform
  labels:
    app: payment-service
    tier: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
        tier: application
    spec:
      containers:
        - name: payment-service
          image: ticketing/payment-service:latest
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "768Mi"
