infra/k8s/reservation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  namespace: ticketing-platform
  labels:
    app: reservation-service
    tier: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
        tier: application
    spec:
      containers:
        - name: reservation-service
          image: ticketing/reservation-service:latest
          ports:
            - containerPort: 3004
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
